fix phone number text-decoration on iphone

--- a/styles.scss
+++ b/styles.scss
@@ -56,13 +56,8 @@ header {
   }
   }
 }
-a[x-apple-data-detectors] {
-  color: inherit !important;
-  text-decoration: none !important;
-  font-size: inherit !important;
-  font-family: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
+a[href^=tel] {
+  color: inherit; text-decoration: none;
 }
 
 #portrait {
